--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                 <li>Sula Red/White 1400/-</li>
                 <li>Sula Zinfandel 1500/-</li>
                 <li>Big Banyan Red/White 1700/-</li>
-                <li>Jacob's Creek 1700/- Chandon 3500/-</li>
+                <li>Jacob's Creek 1700/-</li>
+                <li>Chandon 3500/-</li>
                 <li>Port 400/-</li>
             </ul>
         </div>
